	PR c++/15701 	* friend.c (add_friend): Do not try to perform access checks for 	functions from dependent classes.

PR c++/15701
	* g++.dg/template/friend29.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@82516 138bc75d-0d04-0410-961f-82ee72b054a4